1576990468 | 63 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_finnish.txt,  M content/vrmonitor/translations/vrmonitor_errors_turkish.txt,  M content/vrmonitor/translations/vrmonitor_greek.txt,  M content/vrmonitor/translations/vrmonitor_latam.txt,  M content/vrmonitor/translations/vrmonitor_polish.txt,  M content/vrmonitor/translations/vrmonitor_turkish.txt,  M content/vrmonitor/translations/vrmonitor_vietnamese.txt,  M drivers/lighthouse/resources/webinterface/libraries.js,  M drivers/lighthouse/resources/webinterface/pairing.html,  M drivers/lighthouse/resources/webinterface/pairing.js,  M drivers/lighthouse/resources/webinterface/vrwebui_shared.js,  M drivers/oculus/resources/input/vrcompositor_bindings_touch.json,  M resources/config/vrcompositor_bindings_generic_hmd.json,  M resources/config/vrcompositor_bindings_knuckles.json,  M resources/config/vrcompositor_bindings_vive_controlle
https://steamdb.info/patchnotes/4566779/

--- a/resources/webinterface/dashboard/localization/bindingui_french.json
+++ b/resources/webinterface/dashboard/localization/bindingui_french.json
@@ -282,7 +282,7 @@
   "TrackerEditor_SelectControllerRole": "Main :",
   "DisplaySettings_Title": "Paramètres d'affichage",
   "DisplaySettings_DisplayBrightness": "Luminosité de l'affichage",
-  "DisplaySettings_IndexColumnCorrection": "Correction de l'affichage des colonnes du Valve Index",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Correction des colonnes",
   "DisplaySettings_ColumnCorrectionDesc": "La correction des colonnes réduit l'effet de grille lors des mouvements de tête. Nous vous recommandons de laisser cette option activée avec un ajustement de 0.",
   "DisplaySettings_ColumnCorrectionEdit": "Modifier",
