--- a/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
@@ -164,13 +164,13 @@
 	"Settings_PerApplication_Reprojection_Header": "Uudelleenprojektio",
 	"Settings_PerApplication_Reprojection_Checkbox": "Käytä alkuperäistä uudelleenprojektiotilaa",
 	"Settings_PerApplication_Reprojection_Description": "Tämän asetuksen valitseminen poistaa asynkronisen uudelleenprojektion tältä peliltä.",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Korvaa tämän sovelluksen yleiset päivitystiheysasetukset",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Korvaa tämän sovellukset yleiset päivitystiheysasetukset",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Tämän asetuksen valitseminen mahdollistaa eri päivitystiheyden määrittelyn sovellukselle yleisistä asetuksista.",
 	"Settings_MimeTypes_Pancake_Header": "Valitse sovellus, jotta voit käynnistää 2D-sovellukset",
 	"Settings_Camera_EnableCamera": "Ota kamera käyttöön",
-	"Settings_Camera_AllowCameraInDashboard": "Näytä kamera ohjaimessa",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Käynnistää ohjaimeesi liitetyn kameranäkymän, kun työpöytä on käytössä.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Näytä kamera huoneen reunalla",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Ota huonenäkymä käyttöön",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Pääset milloin tahansa huonenäkymään kaksoisklikkaamalla järjestelmäpainiketta.",
@@ -188,7 +188,7 @@
 	"Settings_Appearance_DomeCameraHeightDesc": "Säätää kameran korkeutta suhteessa taustakuvaan",
 	"Settings_Appearance_DomeCameraRadius": "Kupolin säde",
 	"Settings_Appearance_DomeCameraRadiusDesc": "Vaihtaa kupolin kokoa.",
-	"Settings_Appearance_ResetDomeProjectionSettings": "Palauta kupoliheijastuksen oletusarvot",
+	"Settings_Appearance_ResetDomeProjectionSettings": "Nollaa kupoliheijastus oletusarvoihin",
 	"Settings_Appearance_PlayAreaColorDesc": "Muokkaa pelialueesi tyyliä. Saat tämän näkymän, kun pelejä ladataan tai olet poistanut käytöstä SteamVR Home -betaversion.",
 	"Settings_Appearance_PlayArea_FloorColor": "Pelialueen lattian väri",
 	"Settings_Appearance_MoreEnvironments": "Hanki lisää SteamVR Home -ympäristöjä",
@@ -204,7 +204,7 @@
 	"Settings_General_Confirm": "Vahvista",
 	"Settings_General_Close": "Sulje",
 	"Settings_General_CalibrateThumbstick": "Kalibroi",
-	"Settings_General_CalibrateThumbstick_ConnectAController": "Yhdistä ohjain ohjainsauvaan.",
+	"Settings_General_CalibrateThumbstick_ConnectAController": "Yhdistä ohjain ohjainsauvalla.",
 	"Settings_General_NotEnoughSamples": "Paina ohjainsauvalla ylöspäin vielä vähintään %1$s kertaa suorittaaksesi kalibroinnin loppuun.",
 	"Settings_General_InviteMoreSamples": "Laskettu kulma: %1$s°. Jatka painamista ylöspäin, jotta voit säätää kulman arvoa tai hyväksy tämä kalibrointi painamalla \"Hyväksy\".",
 	"Settings_General_LeftThumbstickAngle": "Vasemman ohjaimen kulma: %1$s astetta",
@@ -216,7 +216,7 @@
 	"Settings_Classic": "Klassinen",
 	"Settings_Near": "Lähellä (beta)",
 	"Settings_DesktopScale": "Työpöydän skaala",
-	"Settings_DashboardScale": "Työpöydän skaala",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 sekuntia",
 	"SettingsTime_30s": "30 sekuntia",
 	"SettingsTime_1m": "Minuutti",
@@ -277,7 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Sovelluskohtaiset videoasetukset",
 	"Settings_ChooseStartupOverlayApps": "Valitse sovellukset käynnistyksen yhteydessä olevaan peitetasoon",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Käynnistä nämä peitetason sovellukset käynnistyksen yhteydessä:",
-	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "Peitetason sovelluksia ei löytynyt",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Aktiivinen ohjain",
 	"Settings_EditBinding": "Muokkaa tätä määritystä",
 	"Settings_EditBinding_ChooseAnother": "Valitse toinen",
@@ -289,6 +289,6 @@
 	"Settings_ShowThumbstickSettings": "Muokkaa ohjainsauvan asetuksia",
 	"Settings_ThumbstickSettings": "Ohjainsauvan asetukset",
 	"Settings_Number_Selected": "%1$s valittu",
-	"TestControllerTitle": "Testataan ohjainta %1$s",
-	"TestController_NoController": "Laita ohjain päälle testataksesi sitä."
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
