--- a/resources/webinterface/dashboard/localization/vrmonitor_french.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_french.json
@@ -133,8 +133,8 @@
 	"Settings_Video_AppResFooter": "Avec ce paramètre, le rendu de chaque œil est de %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "Fluidification des mouvements",
 	"Settings_Advanced_MotionSmoothing_Description": "Synthétise de nouvelles images pour maintenir une bonne expérience quand l'application lancée ne peut pas suivre.",
-	"Settings_Advanced_MotionSmoothing_Disabled": "La fluidification des mouvements n'est pas prise en charge par ce processeur graphique / cette version du pilote (prise en charge de la reprojection asynchrone nécessaire).",
-	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "La fluidification des mouvements n'est pas prise en charge par les anciennes versions de Windows.",
+	"Settings_Advanced_MotionSmoothing_Disabled": "Motion smoothing not supported on this GPU / driver version (requires asynchronous reprojection support).",
+	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Motion Smoothing is not supported on older versions of Windows.",
 	"Settings_Advanced_Supersampling_Auto": "Automatique",
 	"Settings_Advanced_Supersampling_Custom": "Personnalisé",
 	"Settings_Advanced_Supersampling_Header": "Résolution du rendu",
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Cochez cette option si vous voulez définir une nouvelle fréquence de rafraîchissement pour cette application depuis les paramètres généraux.",
 	"Settings_MimeTypes_Pancake_Header": "Sélectionnez l'application avec laquelle lancer les applications 2D",
 	"Settings_Camera_EnableCamera": "Activer la caméra",
-	"Settings_Camera_AllowCameraInDashboard": "Afficher la caméra sur le contrôleur",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Active une fenêtre caméra attachée à votre contrôleur quand le tableau de bord est affiché.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Afficher la caméra aux limites de la pièce",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Activer la vue de la pièce",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Accédez à la vue de la pièce à tout instant par un double clic du bouton System",
@@ -216,7 +216,7 @@
 	"Settings_Classic": "Classique",
 	"Settings_Near": "Proche (bêta)",
 	"Settings_DesktopScale": "Échelle du bureau",
-	"Settings_DashboardScale": "Échelle du tableau de bord",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 secondes",
 	"SettingsTime_30s": "30 secondes",
 	"SettingsTime_1m": "1 minute",
@@ -277,11 +277,11 @@
 	"Settings_PerApplication_VideoSettings": "Paramètres vidéo par application",
 	"Settings_ChooseStartupOverlayApps": "Choisir les applications présentes dans l'overlay au démarrage",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Lancer ces applications d'overlay au démarrage :",
-	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "Aucune application de l'overlay n'a été trouvée",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Contrôleur actif",
 	"Settings_EditBinding": "Modifier cette configuration",
 	"Settings_EditBinding_ChooseAnother": "En sélectionner une autre",
-	"Settings_ShowOldBindingUI": "Afficher les anciennes configurations de l'interface",
+	"Settings_ShowOldBindingUI": "Show Old Binding UI",
 	"Settings_ManageVideoSettingsForApp": "Gérer les paramètres vidéo pour :",
 	"Settings_ManageControllerBindingSettingsForApp": "Gérer les configurations des contrôleurs pour :",
 	"Settings_ActiveControllerBinding": "Configuration du contrôleur active",
@@ -289,6 +289,6 @@
 	"Settings_ShowThumbstickSettings": "Modifier les paramètres du stick analogique",
 	"Settings_ThumbstickSettings": "Paramètres du stick analogique",
 	"Settings_Number_Selected": "%1$s sélectionné",
-	"TestControllerTitle": "Test du contrôleur %1$s",
-	"TestController_NoController": "Allumez un contrôleur pour le tester."
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
