--- a/resources/webinterface/dashboard/localization/webhelper_brazilian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_brazilian.json
@@ -23,7 +23,7 @@
 	"PowerMenuHeader": "Menu de inicialização",
 	"IPD_Description": "Distância entre as lentes",
 	"NoSteamWarning": "O Steam não está disponível no momento. Alguns recursos podem estar desativados.",
-	"WakingUpBaseStations": "Despertando estações-base...",
+	"WakingUpBaseStations": "Despertando estações base...",
 	"/input/joystick": "Controle",
 	"/input/trackpad": "Trackpad",
 	"/input/trigger": "Gatilho",
@@ -48,8 +48,8 @@
 	"/user/hand/primary": "Mão dominante",
 	"/user/hand/secondary": "Mão secundária",
 	"/user/hand/any": "Qualquer mão",
-	"/user/stylus": "Caneta",
-	"/user/gamepad": "Controle",
+	"/user/stylus": "Stylus",
+	"/user/gamepad": "Gamepad",
 	"/user/foot/left": "Pé esquerdo",
 	"/user/foot/right": "Pé direito",
 	"/user/shoulder/left": "Ombro esquerdo",
