1580954876 | 67 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_italian.txt,  M content/vrmonitor/translations/vrmonitor_errors_vietnamese.txt,  M content/vrmonitor/translations/vrmonitor_finnish.txt,  M content/vrmonitor/translations/vrmonitor_italian.txt,  M content/vrmonitor/translations/vrmonitor_japanese.txt,  M content/vrmonitor/translations/vrmonitor_polish.txt,  M content/vrmonitor/translations/vrmonitor_portuguese.txt,  M content/vrmonitor/translations/vrmonitor_swedish.txt,  M content/vrmonitor/translations/vrmonitor_thai.txt,  M content/vrmonitor/translations/vrmonitor_vietnamese.txt,  M drivers/lighthouse/resources/webinterface/libraries.js,  M drivers/lighthouse/resources/webinterface/pairing.html,  M drivers/lighthouse/resources/webinterface/pairing.js,  M resources/webhelperoverlays.json,  M resources/w
https://steamdb.info/patchnotes/4646449/

--- a/content/vrmonitor/translations/vrmonitor_vietnamese.txt
+++ b/content/vrmonitor/translations/vrmonitor_vietnamese.txt
@@ -1716,6 +1716,10 @@
 "[english]PlaylistPlayer_WindowTitle_WithName"	"Playlist Player - %1"
 "PlaylistPlayer_All_Checkbox"	"Tất cả"
 "[english]PlaylistPlayer_All_Checkbox"	"All"
+"PlaylistPlayer_ForceSoundVolume_Checkbox"	"Ép đặt âm lượng"
+"[english]PlaylistPlayer_ForceSoundVolume_Checkbox"	"Force Sound Volume"
+"PlaylistPlayer_PlaySoundBeforeEnd_Checkbox"	"Phát âm thanh trước khi mục kết thúc trong vài giây"
+"[english]PlaylistPlayer_PlaySoundBeforeEnd_Checkbox"	"Play Sound before entry ends in seconds"
 "PlaylistPlayer_ManualNext_Checkbox"	"Tiếp theo thủ công"
 "[english]PlaylistPlayer_ManualNext_Checkbox"	"Manual Next"
 "PlaylistPlayer_Length_Header"	"Độ dài"
