--- a/resources/webinterface/dashboard/localization/dashboard_english.json
+++ b/resources/webinterface/dashboard/localization/dashboard_english.json
@@ -41,5 +41,6 @@
   "App_Video_Settings": "Video Settings",
 
   "Desktop": "Desktop",
-  "Desktop_X": "Desktop %1$s"
+  "Desktop_X": "Desktop %1$s",
+  "Size": "Size"
 }
