1581038323 | 37 files | M Protobufs/network_connection.proto,  M Protobufs/steammessages.proto,  M Protobufs/steammessages_cloud.steamworkssdk.proto,  M Protobufs/steammessages_helprequest.steamworkssdk.proto,  M Protobufs/steammessages_oauth.steamworkssdk.proto,  M Protobufs/steammessages_player.steamworkssdk.proto,  M Protobufs/steammessages_publishedfile.steamworkssdk.proto,  M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/bindingcallouts.js,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/controllerbindingui.js,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/debugcommands.js,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/keyboard.js,  M resources/webinterface/dashboar
https://steamdb.info/patchnotes/4650530/

--- a/content/vrmonitor/translations/vrmonitor_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_brazilian.txt
@@ -2107,7 +2107,7 @@
 "[english]MenuAction_ShowManageTrackers"	"Manage Vive Trackers"
 "Settings_BaseStation_BluetoothBusy"	"Esperando por Bluetooth..."
 "[english]Settings_BaseStation_BluetoothBusy"	"Waiting for Bluetooth..."
-"Settings_BaseStation_BluetoothRequired"	"Os recursos sem fio não estão disponíveis até que os serviços Bluetooth sejam ativados."
+"Settings_BaseStation_BluetoothRequired"	"Por favor, ative o Bluetooth para acessar recursos sem fio da estação-base, como gerenciamento de energia e atualizações."
 "[english]Settings_BaseStation_BluetoothRequired"	"Please enable Bluetooth to access wireless features such as base station power management and updates."
 "Settings_BaseStation_OpenSettingsBluetooth"	"Ver configurações de Bluetooth"
 "[english]Settings_BaseStation_OpenSettingsBluetooth"	"View Bluetooth Settings"
