1581446799 | 30 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M drivers/lighthouse/resources/webinterface/pairing.js,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/bindingcallouts.js,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/controllerbindingui.js,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/debugcommands.js,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/fallback.js,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/keyboard.js,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/messageoverlay.js,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/notificationtoast.js,  M resources/webinterface/dashboard/progressindicator.ht
https://steamdb.info/patchnotes/4665243/

--- a/content/vrmonitor/translations/vrmonitor_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_brazilian.txt
@@ -1999,7 +1999,7 @@
 "[english]Settings_PerApplication_Header"	"Use these options to create unique settings per application"
 "Settings_PerApplication_AppResTitle"	"Resolução personalizada"
 "[english]Settings_PerApplication_AppResTitle"	"Custom Resolution"
-"Settings_PerApplication_AppResHeader"	"Esta configuração funciona como um multiplicador sobre a configuração de resolução global de aplicativos na aba Vídeo à direita. O aplicativo pode precisar ser reiniciado para as configurações serem aplicadas. (Padrão: 100%)"
+"Settings_PerApplication_AppResHeader"	"Esta configuração funciona como um multiplicador sobre a resolução do aplicativo (configurada na aba \"Vídeo\"). O aplicativo pode precisar ser reiniciado para as configurações serem aplicadas. (Padrão: 100%)"
 "[english]Settings_PerApplication_AppResHeader"	"This setting is a multiplier on top of your Video Application Resolution settings. This application may need to be restarted for settings to take effect. (Default is 100%)"
 "Settings_PerApplication_AppResFooter"	"A configuração atual renderiza uma imagem <font color=#eeeeee>%1x%2</font> para cada olho"
 "[english]Settings_PerApplication_AppResFooter"	"The current setting renders each eye at <font color=#eeeeee>%1x%2</font>"
