1582337812 | 35 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M drivers/lighthouse/resources/webinterface/pairing.js,  M drivers/oculus/resources/input/vrcompositor_bindings_touch.json,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/bindingcallouts.js,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/controllerbindingui.js,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/debugcommands.js,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/fallback.js,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/keyboard.js,  M resources/webinterface/dashboard/localization/bindingui_english.json,  M resources/webinterface/dashboard/localization/dashboard_english.json,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/messageoverlay.js,  M resources/webint
https://steamdb.info/patchnotes/4704278/

--- a/resources/webinterface/dashboard/localization/bindingui_english.json
+++ b/resources/webinterface/dashboard/localization/bindingui_english.json
@@ -53,6 +53,8 @@
   "SourceInputMode_TouchInitialState": "Touch action initially held:",
   "SourceInputMode_OverlapPercent": "Overlap Percentage:",
   "SourceInputMode_DeadzonePercent": "Dead zone Percentage:",
+  "SourceInputMode_Maxzone": "Max zone Percentage:",
+  "SourceInputMode_Exponent": "Curve Exponent:",
   "SourceInputMode_StickyDpad" : "Persist Dpad action once activated",
   "SourceInputMode_LongPressDelay": "Long press delay:",
   "SourceInputMode_DoublePressDelay": "Double press delay:",
@@ -105,6 +107,7 @@
   "SourceInputMode_StickyClick_tooltip": "Keep thumbstick clicked while stick is deflected",
   "SourceInputMode_StickyClick_Activate_tooltip": "How much you have to deflect the stick to engage.",
   "SourceInputMode_StickyClick_Deactivate_tooltip": "How much you have to relax the stick for it to disengage.",
+  "SourceInputMode_TouchyClick_tooltip": "Keep button clicked as long as it's touched",
   "SourceInputMode_ButtonModeInputForce_Click_tooltip": "Optionally get the value for this from the force sensor (how much pressure is applied) or the capacitive sensor (how close a finger is).",
   "SourceInputMode_CapsenseEnableThreshold_tooltip": "At what point to enable the grab due to a finger being close to the grip.",
   "SourceInputMode_GrabThreshold_tooltip": "The combined activation thresholds for the capacitive sensor and the force sensor.",
@@ -231,6 +234,7 @@
   "SourceInputMode_StickyClick": "Keep thumbstick clicked while stick is deflected",
   "SourceInputMode_StickyClick_Activate": "Deflection activation threshold",
   "SourceInputMode_StickyClick_Deactivate": "Deflection deactivation threshold",
+  "SourceInputMode_TouchyClick": "Keep button clicked as long as it's touched",
   "SourceInputMode_ButtonModeInputForce_Click": "Generate click from:",
   "SourceInputMode_Grab": "Grab",
   "SourceInputMode_CapsenseEnableThreshold": "Capsense Enable Threshold:",
