--- a/resources/webinterface/dashboard/localization/dashboard_english.json
+++ b/resources/webinterface/dashboard/localization/dashboard_english.json
@@ -52,5 +52,7 @@
   "WelcomeHeader": "No Games?",
   "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
   "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games"
+  "WelcomeInstall": "Install Games",
+
+  "Play": "Play"
 }
